[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
